# PolishNotationCalculator

./: CMakeLists.txt  README.md  main.cpp
Structures/: CustomException.hpp  Funct.cpp  Funct.hpp  MyStack.hpp  Node.hpp  SingleLinkedList.hpp
